<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".main.activity.RestaurantActivity">

    <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/baloo2_bold"
            android:text="@string/lunchingText"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textViewSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/baloo2_semi_bold"
            android:text="@string/lunchingSubText"
            android:textColor="@color/colorSecondaryText"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


    <TextView
            android:id="@+id/textViewSubSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo2_semi_bold"
            android:text="@string/lunchingSubSubText"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle" />

    <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSubSubTitle">

        <LinearLayout
                android:id="@+id/linearLayoutSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:src="@android:drawable/ic_search_category_default"
                    android:tint="@color/colorPrimary" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo2_medium"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/search_for_your_location_text"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.neal786y.mvparchitecture.main.util.EmptyRecyclerView
            android:id="@+id/recyclerViewRestaurants"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewSearch"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/textViewEmptyMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo2_semi_bold"
            android:padding="8dp"
            android:text="@string/please_search_your_location_to_explore_restaurants_nearby_text"
            android:textAlignment="center"
            android:textColor="@color/colorGrey"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>